syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

package bilibili.main.api.gateway.Demo.v1;

option go_package = "api";
option (gogoproto.goproto_getters_all) = false;

service Demo {
  rpc SayHello(HelloReq) returns (HelloResp);
}

message HelloReq {
  string name = 1 [(gogoproto.moretags) = 'form:"name" validate:"required"'];
  int64 aid = 2 [(gogoproto.moretags) = 'form:"aid"'];
}

message HelloResp {
  string Content = 1 [(gogoproto.jsontag) = 'content'];
}
